--- a/bh/2,8.css
+++ b/bh/2,8.css
@@ -3,11 +3,9 @@ margin: 0%;
 padding: 0%;
 }
 .container{
-display: flex;
-background-color: white;
+width: 100%;
+height: 100vh;
+background-image: ;
 }
 .login{
-width: 30%;
-height: 30%;
-background-color: tomato;
 }
